<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Easy reports</string>

    <string name="driver_report">Business trip report</string>
    <string name="history_report">History Reports</string>

    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="patronymic">Patronymic</string>
    <string name="add_makes_registration_vehicles_trailers">Makes and license plates
        of vehicles (trailers):</string>
    <string name="vehicle">Vehicle</string>
    <string name="trailer">Trailer</string>
    <string name="make_vehicle_trailer">Make of the vehicle / trailer</string>
    <string name="make_vehicle">Make of the vehicle</string>
    <string name="make_trailer">Make of the trailer</string>
    <string name="registration_number_vehicle">Registration number of the vehicle</string>
    <string name="registration_number_trailer">Registration number of the trailer</string>
    <string name="rn_vehicle_trailer">R/n of the vehicle / trailer</string>
    <string name="rn_vehicle">R/n of the vehicle</string>
    <string name="rn_trailer">R/n of the trailer</string>
    <string name="add">Add</string>
    <string name="type">Type</string>
    <string name="make">Make</string>
    <string name="rn">R/n</string>
    <string name="save_entered_data">Save the entered data?</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="save_file">Save file</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="info">Info</string>
    <string name="clear">Clear</string>
    <string name="driver">Driver:</string>



    <string name="create_report">Create report</string>
    <string name="be_continued">To be continued</string>
    <string name="report_history">Report history</string>
    <string name="settings">Settings</string>



...
    <string name="send">Send</string>
    <string name="exit">Exit</string>

    <string name="back_button">Back</string>

    <string name="test">TEST</string>
    <string name="vehicle_test">VEHICLE</string>
    <string name="trailer_test">TRAILER</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="deletion">Deletion</string>

...
