package com.example.reportsfordrivers

object Tags {
    const val TAG_COLUMN_FIRST_ENTRY: String = "tagColumnFirstEntry"
    const val TAG_TEST_FIRST_ENTRY_LAST_NAME: String = "tagTestFirstEntryLastName"
    const val TAG_TEST_FIRST_ENTRY_FIRST_NAME: String = "tagTestFirstEntryFirstName"
    const val TAG_TEST_FIRST_ENTRY_PATRONYMIC: String = "tagTestFirstEntryPatronymic"
    const val TAG_TEST_FIRST_ENTRY_MAKE: String = "tagTestFirstEntryMake"
    const val TAG_TEST_FIRST_ENTRY_RN: String = "tagTestFirstEntryRn"
    const val TAG_TEST_FIRST_ENTRY_TABLE: String = "tagTestFirstEntryTable"
    const val TAG_TEST_FIRST_ENTRY_BUTTON_TABLE: String = "tagTestFirstEntryButtonTable"

    const val TAG_TEST_PROGRESS_REPORTS_COUNTRY: String = "tagTestProgressReportsCountry"
    const val TAG_TEST_PROGRESS_REPORTS_TOWNSHIP_ONE: String = "tagTestProgressReportsTownshipOne"
    const val TAG_TEST_PROGRESS_REPORTS_TOWNSHIP_TWO: String = "tagTestProgressReportsTownshipTwo"
    const val TAG_TEST_PROGRESS_REPORTS_DISTANCE: String = "tagTestProgressReportsDistance"
    const val TAG_TEST_PROGRESS_REPORTS_CARGO_WEIGHT: String = "tagTestProgressReportsCargoWeight"
...
